fix overflow-nav

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,7 +1,7 @@
 .contactContainer {
   background: $white;
   width: 100vw;
-  height: 85vh;
+  min-height: 85vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
