--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: $lightO;
-  min-height: 10vh;
+  min-height: 9vh;
   width: 100vw;
   display: flex;
   justify-content: flex-start;
@@ -39,7 +39,7 @@
   }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 390px) {
   .footer-container {
     padding: 5px;
     font-size: 10px;
